--- a/views/room.ejs
+++ b/views/room.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vision Live Meeting</title>
-    <link rel="stylesheet" href="https://visionmeeting.netlify.app/public/styles.css">
+    <link rel="stylesheet" href="http://localhost:3030/public/styles.css">
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.3.1/peerjs.min.js.map"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
@@ -98,7 +98,7 @@
             </div>
         </div>
     </div>
-    <script src="https://visionmeeting.netlify.app/public/main.js"></script>
+    <script src="http://localhost:3030/public/main.js"></script>
 </body>
 
 </html>
